feat(front): show event_date on event detail page

--- a/frontend/pages/show/event_detail/event_detail.wxml
+++ b/frontend/pages/show/event_detail/event_detail.wxml
@@ -15,6 +15,7 @@
       <view class="title-container">
         {{title}}
       </view>
+      <view class="event_date">{{event_date}}</view>
       <view class="text-container">{{text}}
       </view>
       <view class="tags-container">
