--- a/frontend/pages/register/register.wxss
+++ b/frontend/pages/register/register.wxss
@@ -43,7 +43,7 @@
 }
 .create-familyId {
   font-size: 14px;
-  color: #4095E5;
+  color: rgb(27,52,113);
   text-decoration: underline;
   margin-left: 10%;
   display: block;
@@ -52,7 +52,7 @@
 }
 .cancel {
   font-size: 14px;
-  color: #4095E5;
+  color: rgb(27,52,113);
   text-decoration: underline;
   display: block;
   float: right;
