--- a/frontend/pages/show/data_detail/data_detail.wxml
+++ b/frontend/pages/show/data_detail/data_detail.wxml
@@ -1,7 +1,21 @@
 <!--pages/show/data_detail/data_detail.wxml-->
 <view>
-  <view></view>
-  <view class="line"></view>
-</view>
+  <view id="title_area">
+    <view style="position: relative; left: 5px; color: darkgray;">数据记录</view>
+    <view class="line"></view>
+  </view>
 
-<view wx:for="{{records}}" wx:key="*this"> {{item.key}}: {{item.value}}</view>
+  <view id="record_area">
+    <view wx:for="{{records}}" wx:key="this"> 
+      <text class="key">{{item.key}}: </text> 
+      <text class="value">{{item.value}}</text>
+      <view class="lighter_line"></view>
+    </view>
+  </view>
+
+  <view id="info_area">
+    <view class="line"></view>
+    <text id="date">{{date}}</text>
+    <text id="delete_btn" bind:tap="deleteThis">#删除</text>
+  </view>
+</view>
