feat(front): change ui on user and family page

--- a/frontend/pages/user/family/family.wxml
+++ b/frontend/pages/user/family/family.wxml
@@ -2,14 +2,25 @@
 
 <view class="family-list">
   <block wx:for="{{blog_cards_list}}" wx:key="index">
-    <view class="view_image_text">
+    <!-- <view class="view_image_text">
       <image class="user_profile" src="{{item.imgSrc}}" />
       <text class="user_name">{{item.name}}</text>
       <text class="user_tag">{{item.label}}</text>
       <text class="user_signature">{{item.signature}}</text>
+    </view> -->
+    <!-- <family-card name="{{item.name}}" label="{{item.label}}" signature="{{itesignature}}" imgSrc="{{item.imgSrc}}"></family-card> -->
+    <view class="view_image_text">
+    <view class="profile_view">
+        <image class="user_profile" src="{{item.imgSrc}}" />
+      </view>
+      <view class="text_view">
+        <view style="display: flex; flex-direction: row;">
+        <text class="user_name">{{item.name}}</text>
+        <text class="user_tag">{{item.label}}</text>
+        </view>
+        <view class="user_info">{{item.signature}}</view>
+      </view>
     </view>
-    <family-card name="{{item.name}}" label="{{item.label}}" signature="{{itesignature}}" imgSrc="{{item.imgSrc}}"></family-card>
-    
   </block>
 </view>
 
