--- a/frontend/pages/user/family/family.wxss
+++ b/frontend/pages/user/family/family.wxss
@@ -8,33 +8,58 @@
 
 .view_image_text {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 280rpx;
+  /* align-items: center;
+  justify-content: center; */
+  flex-direction: row;
+  /* height: 15vh; */
+  padding:2vh;
   background-color: #fff;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
   border-radius: 30rpx;
-  margin-left: -40%;
-  margin-top: 10px;
+  margin-top: 2vh;
+  margin-left: 2vh;
+
+}
+.profile_view {
+  /* margin-left: 2vh; */
+  /* margin-top: 2vh; */
+  width: 80px;
 }
 
 .user_profile {
   width: 70px;
   height: 70px;
   border-radius: 1vh;
-  margin-right: 10px;
+  margin-right: 1vh;
+}
+
+.text_view{
+  margin-left: 1vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
 }
 
 .user_name {
-  margin-top: -20px;
-  font-size: 20px;
-  float: left;
+  /* margin-top: -20px; */
+  font-size: 2.5vh;
+}
+
+.user_info{
+  /* margin-top: 40px;
+  margin-left: -40px; */
+  font-size: 2vh;
+  margin-top: 1vh;
 }
 
 .user_tag {
-  margin-top: -20px;
+  /* margin-top: -20px; */
   font-size: 16px;
-  height: 30px;
+  /* height: 30px; */
+  padding-left: 0.5vh;
+  padding-right: 0.5vh;
   background: #f0f8ff;
   border: 1rpx solid #4095E5;
   border-radius: 10rpx;
@@ -42,7 +67,7 @@
   color: #4095E5;
   line-height: 62rpx;
   margin-left: 5px;
-  float: left;
+  /* float: left; */
 }
 
 .user_signature {
