--- a/frontend/pages/user/user.wxml
+++ b/frontend/pages/user/user.wxml
@@ -2,11 +2,20 @@
   <!-- 第一部分 -->
   <view class="view_1">
     <view class="white-box">
-      <view class="view_image_text">
+      <!-- <view class="view_image_text">
         <image class="user_profile" src="{{user_profile}}" />
         <text class="user_name">{{username}}</text>
         <text class="user_tag">{{user_label}}</text>
+      </view> -->
+      <view class="view_image_text">
+      <view class="profile_view">
+        <image class="user_profile" src="{{user_profile}}" />
       </view>
+      <view class="text_view">
+        <view class="user_name">{{username}}</view>
+        <view class="user_tag">{{user_label}}</view>
+      </view>
+</view>
       <view class="user_info">
         <text class="info_data" id="data_1">{{event_number}}</text>
         <text class="info_type">事件</text>
