--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -15,18 +15,17 @@
   position: relative;
   left: 5%;
   width: 90%;
-  margin-bottom: 3vh;
   /* margin-top: 3vh; */
   top: 3vh;
   background-color: rgba(240, 242, 243, 0.397);
-  box-shadow: 2px 2px 6px rgb(141, 137, 137);
+  box-shadow: 1px 1px 6px rgb(210, 210, 210);
   border-radius: 2vh;
   backdrop-filter: blur(10px);
 }
 
 .todo-header {
   position: relative;
-  font-size: 3vh;
+  font-size: 20px;
   color: #0759a5;
   margin-left: 2vh;
   top: 1vh;
@@ -37,7 +36,7 @@
   width: 100%;
   /* overflow-y: scroll;  */
   /* background-color: #78beff2c; */
-  margin-top: 1vh;
+  margin-top: 5px;
   border-radius: 1vh;
 }
 
@@ -54,7 +53,7 @@
   align-items: center;
   margin-bottom: 1px;
   margin-top: 1px;
-  height: 2vh;
+  height: 24px;
 }
 
 .todo-item checkbox .wx-checkbox-input{
@@ -67,8 +66,7 @@
 .task_name {
   position: relative;
   left: 1vw;
-  font-size: 2.2vh;
-  /* font-size: 16px; */
+  font-size: 16px;
 }
 
 .left_days {
@@ -76,8 +74,7 @@
   right: 5vw;
 
   color: #494955;
-  /* font-size: 15px; */
-  font-size: 2vh;
+  font-size: 15px;
 }
 
 .container_plan {
@@ -85,9 +82,9 @@
   left: 5%;
   width: 90%;
   margin-bottom: 3vh;
-  margin-top: 7vh;
+  margin-top: 8vh;
   background-color: rgba(240, 242, 243, 0.397);
-  box-shadow: 2px 2px 6px rgb(141, 137, 137);
+  box-shadow: 1px 1px 6px rgb(210, 210, 210);
   border-radius: 2vh;
   backdrop-filter: blur(10px);
 }
@@ -95,7 +92,7 @@
 .plan-header {
   position: relative;
   width: 70vh;
-  font-size: 3vh;
+  font-size: 20px;
   color: #0759a5;
   margin-left: 2vh;
   margin-bottom: 1vh;
@@ -114,10 +111,9 @@
   padding: 2vh;
   padding-left: 1vh;
   width: 100%;
-  height: 1.5vh;
-  /* font-size: large; */
-  font-size: 2.3vh;
-  margin-bottom: 1vh;
+  height: 20px;
+  font-size: 16px;
+  margin-bottom: 4px;
 }
 .plan-name{
   padding-left: 1vh;
@@ -126,22 +122,12 @@
 }
 .add-text{
   color: rgb(56, 98, 109);
-  margin-bottom: 1vh;
-  font-size: 2.2vh;
+  font-size: 16px;
 }
 .add-plan{
   padding: 2vh;
-  height: 2vh;
+  height: 20px;
   color: rgba(200, 200, 200);
-}
-
-.plan-input{
-  position: relative;
-  margin-top: -4vh;
-  margin-left: 2vh;
-  height: 3vh;
-  background-color: rgb(250, 250, 250);
-  z-index: 1;
 }
 
 .line {
