--- a/frontend/pages/show/data_detail/data_detail.wxml
+++ b/frontend/pages/show/data_detail/data_detail.wxml
@@ -7,7 +7,7 @@
 
   <view id="record_area">
     <view wx:for="{{records}}" wx:key="this"> 
-      <text class="key">{{item.key}}: </text> 
+      <text class="key">{{item.key}} </text> 
       <text class="value">{{item.value}}</text>
       <view class="lighter_line"></view>
     </view>
@@ -16,6 +16,6 @@
   <view id="info_area">
     <view class="line"></view>
     <text id="date">{{date}}</text>
-    <text id="delete_btn" bind:tap="deleteThis">#删除</text>
+    <text id="delete_btn" bind:tap="deleteThis">删除</text>
   </view>
 </view>
