--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -1,7 +1,8 @@
 <!--pages/user/child/child_detail/child_detail.wxml-->
 
 <view>
-  <h1>{{name}}</h1>
+  <view>{{name}}</view>
+  <view>{{plans}}</view>
 </view>
 <view class="ec-container">
      <ec-canvas canvas-id="echart" ec="{{ec_radar}}"></ec-canvas>
