--- a/frontend/pages/user/family/family.wxss
+++ b/frontend/pages/user/family/family.wxss
@@ -45,6 +45,7 @@
 .user_name {
   /* margin-top: -20px; */
   font-size: 2.5vh;
+  text-align: center;
 }
 
 .user_info{
@@ -56,8 +57,9 @@
 
 .user_tag {
   /* margin-top: -20px; */
-  font-size: 16px;
-  /* height: 30px; */
+  font-size: 1.5vh;
+  /* margin-top: 10%; */
+  height: 80%;
   padding-left: 0.5vh;
   padding-right: 0.5vh;
   background: #f0f8ff;
