--- a/frontend/pages/show/data/data.wxss
+++ b/frontend/pages/show/data/data.wxss
@@ -24,7 +24,7 @@
   margin-top: 5px;
   width: 100%;
   height: 1px;
-  background-color: lightgray;
+  background-color: rgb(245, 245, 245);
 }
 
 #addBtn {
@@ -36,18 +36,10 @@
   height: 24px;
 }
 
-.tag-cont{
-  grid-area: 3/1/4/5;
-
-  width: 88vw;
-  height: 40px;
-  justify-self: center ;
-}
-
 .container_tag{
   grid-area: 3/1/4/5;
   width: 88vw;
-  height: 8vh;
+  height: 60px;
   display: flex;
   overflow: scroll;
   flex-wrap: nowrap;
@@ -86,6 +78,11 @@
   color: #4095E5;
   cursor: pointer;
   white-space: nowrap; 
+}
+
+.tag.selected {
+  background-color: #007bff;
+  color: #fff;
 }
 
 .tag .tag-text {
@@ -168,6 +165,7 @@
   box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
   font-size: 14px;
 }
+
 /* #addBtn {
   position: relative;
   width: 30%;
