--- a/frontend/pages/show/event/event.wxml
+++ b/frontend/pages/show/event/event.wxml
@@ -88,15 +88,34 @@
           
         </view>
 
-        
+        <view class="weui-cell weui-cell_active" style="flex-direction:row; ">
+        <view>
+          <view class="weui-cell__hd" style="margin-right: 70%;"><label class="weui-label">选择孩子</label></view>
+          <view class="container_tag">
+          <view wx:for="{{kidList}}" wx:key="index" data-index='{{index}}' class="tag {{item.checked ? 'selected' : ''}}" bindtap="toggleChild">
+            <text class="tag-text">{{item.info}}</text>
+          </view>
+          </view>
+        </view>
+          
+        </view>
       </view>
     </view>
   </view>
 
+<!-- <view class="container_5 overall-outfit">
+  <view class="upload_title">选择孩子</view>
+  <view class="container_tag">
+    <view wx:for="{{kidList}}" wx:key="index" data-index='{{index}}' class="tag {{item.checked ? 'selected' : ''}}" bindtap="toggleKid">
+      <text class="tag-text">{{item.info}}</text>
+    </view>
+  </view>
+</view> -->
 
-<view id="button-box">
-  <button class="submit" bindtap="handleSubmit" >提交</button>
-</view>
-<view class="place-holder" style="height: 4vh;">
+<view class="container_6 overall-outfit">
+  <view id="button-box">
+    <button class="submit" bindtap="handleSubmit" >提交</button>
+  </view>
+  <view class="place-holder" style="height: 4vh;"></view>
 </view>
 
