feat(front): add 2 charts in child detail page

--- a/frontend/pages/user/child/child_detail/child_detail.wxml
+++ b/frontend/pages/user/child/child_detail/child_detail.wxml
@@ -13,5 +13,9 @@
 </view>
 
 <view class="ec-container_2">
+     <ec-canvas canvas-id="echart" ec="{{ec_event}}"></ec-canvas>
+</view>
+
+<view class="ec-container_2">
      <ec-canvas canvas-id="echart" ec="{{ec_tag2}}"></ec-canvas>
 </view>
