fix(front): fix bug on remote debug

--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -59,7 +59,10 @@
   bottom: 20vh;
   margin-bottom: 0;
 }
-
+.weui-cells__group_form .weui-label {
+  margin-right: 8px;
+  max-width: 6em;
+}
 
 
 /* 添加滚动条样式，这样滚动条就不可见了，但仍然可以滑动 */
