perf(front): try to optimize structure of timeline

--- a/frontend/pages/generate/generate.wxml
+++ b/frontend/pages/generate/generate.wxml
@@ -23,7 +23,7 @@
 				<view class="weui-cells weui-cells_form">
 					
 					<view class="weui-cell weui-cell_active">
-						<view class="weui-cell__hd"><label class="weui-label">时间轴标题</label></view>
+						<view class="weui-cell__hd"><label class="weui-label">标题</label></view>
 						<view class="weui-cell__bd weui-flex">
 							<input
                                 class="weui-input"
@@ -37,7 +37,7 @@
       
 					<view class="weui-cell weui-cell_active weui-cell_disabled">
 						<view class="weui-cell__hd">
-                            <label class="weui-label">时间轴模板</label>
+                            <label class="weui-label">模板</label>
                         </view>
 						<view class="weui-cell__bd">
 							<input class="weui-input" placeholder="请输入微信号" value="{{timelineList[templateSelected].name}}" disabled />
@@ -53,7 +53,7 @@
           <block wx:for="{{timelineList}}" wx:key="index">
             <view class="timeline-item audio-item"  data-category="timeline" data-index="{{index}}" bindtap="selectTemplate">
               <image class="audio-image {{item.id==templateSelected? 'selected' : ''}}" 
-              src="/image/generate/timeline/timeline_{{item.id}}.png" style="width: 36vh;"></image>
+              src="{{host_}}static/frontend/timeline/timeline_{{item.id}}.jpg" style="width: 36vh;"></image>
               <image class="select-icon  {{item.id==templateSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
               <text class="timeline-name">{{item.name}}</text>
             </view>
