feat(back): implement data connecting between backend and frontend in chart_page

--- a/frontend/pages/generate/chart/chart.wxml
+++ b/frontend/pages/generate/chart/chart.wxml
@@ -18,15 +18,15 @@
      <ec-canvas canvas-id="echart" id="echart" ec="{{ec}}"></ec-canvas>
 </view>
 
-<view class="container_template" id="container_color">
+<!-- <view class="container_template" id="container_color">
   <view wx:for="{{colorSet}}" wx:key="index" data-index='{{index}}' class="color {{item.selected ?     'selected' : ''}}" bindtap="changeColor">
     <image class="color-image" src="/image/generate/timeline/color/color_{{index}}.png"></image>
   </view>
-</view>
+</view> -->
 
 <view class="container_template">
   <view wx:for="{{templates}}" wx:key="index" data-index='{{index}}' class="template {{item.selected ?     'selected' : ''}}" bindtap="changeTemplate">
-    <image class="timeline-image" src="/image/generate/chart/chart_{{index}}.png"></image>
+    <image class="timeline-image" src="{{host_}}/static/frontend/chart/chart_{{index}}.jpg"></image>
   </view>
 </view>
 
