--- a/frontend/pages/generate/generate.wxml
+++ b/frontend/pages/generate/generate.wxml
@@ -53,7 +53,7 @@
           <block wx:for="{{timelineList}}" wx:key="index">
             <view class="timeline-item audio-item"  data-category="timeline" data-index="{{index}}" bindtap="selectTemplate">
               <image class="audio-image {{item.id==templateSelected? 'selected' : ''}}" 
-              src="/image/generate/timeline/timeline_{{item.id}}.png" style="width: 36vh;"></image>
+              src="{{host_}}/static/frontend/timeline/timeline_{{index}}.jpg" style="width: 36vh;"></image>
               <image class="select-icon  {{item.id==templateSelected ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
               <text class="timeline-name">{{item.name}}</text>
             </view>
