fix(front): fix bugs on remote debug
bugs: bg image on todo page; bg image 左右拖动; todo page 左右滑动

--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -68,6 +68,7 @@
 /* 添加滚动条样式，这样滚动条就不可见了，但仍然可以滑动 */
 .audio-list::-webkit-scrollbar {
   width: 0.5em;
+  color: transparent;
 }
 
 .audio-list::-webkit-scrollbar-track {
