--- a/frontend/pages/generate/reselect/videoInfo/videoInfo.wxss
+++ b/frontend/pages/generate/reselect/videoInfo/videoInfo.wxss
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 2vh;
+  /* margin-bottom: 2vh; */
 }
 .pick-audio {
   position: relative;
@@ -52,9 +52,33 @@
   border-radius: 2vh;
   margin-bottom: 1vh;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
+
+  display: inline;
+  object-fit: cover;
+  max-width: 100%;
+  border: 1vh solid #ffffff; /* 设置边框宽度和颜色 */
+  border-radius: 2vh; /* 可选：设置边框圆角 */
+  /* height: auto; */
+}
+.audio-image.selected{
+  border: 1vh solid #4095E5; /* 设置边框宽度和颜色 */
+  border-radius: 2vh; /* 可选：设置边框圆角 */
 }
 .weui-form__control-area {
   position: relative;
   margin: 1vh;
   top: -10vh
+}
+.select-icon{
+  position: relative;
+  margin-top: -10vh;
+  margin-bottom: 3vh;
+  margin-left: 4vh;
+  height: 8vh;
+  width: 8vh;
+  z-index: -100;
+}
+
+.select-icon.selected{
+  z-index: 1;
 }
