feat(both): complete the basic function in chart page

--- a/frontend/pages/generate/chart/chart.wxml
+++ b/frontend/pages/generate/chart/chart.wxml
@@ -24,6 +24,7 @@
   </view>
 </view> -->
 
+
 	<view class="weui-form">
     <view class="weui-form__bd">
       <view class="weui-form__control-area">
@@ -33,7 +34,7 @@
                 <view class="weui-cell__bd">按照时间均匀分布</view>
                 <view class="weui-cell__ft">
                     <view class="weui-switch-cp">
-                        <switch checked bindchange="switchChange" color="#007bff"/>
+                        <switch unchecked bindchange="switchChange" color="#007bff"/>
                     </view>
                 </view>
             </label>
